backend/k8s/namespce.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lablab
  labels:
    name: lablab
